# archived

./: archive.py  pyproject.toml
saved_html/some-fancy-name/ajax.googleapis.com/ajax/libs/jquery/1.9.1/: 7be167a5__jquery.min.js
saved_html/some-fancy-name/books.toscrape.com/: index.html
saved_html/some-fancy-name/books.toscrape.com/static/oscar/css/: 25ada418__datetimepicker.css  f106fc4d__styles.css
saved_html/some-fancy-name/books.toscrape.com/static/oscar/js/bootstrap-datetimepicker/: b94d853d__bootstrap-datetimepicker.js  bb4b90df__bootstrap-datetimepicker.css
saved_html/some-fancy-name/books.toscrape.com/static/oscar/js/bootstrap-datetimepicker/locales/: 3265b1c0__bootstrap-datetimepicker.all.js
saved_html/some-fancy-name/books.toscrape.com/static/oscar/js/bootstrap3/: 338b532b__bootstrap.min.js
saved_html/some-fancy-name/books.toscrape.com/static/oscar/js/oscar/: d4f45d48__ui.js
testing/books.toscrape.com/: index.html
testing/books.toscrape.com/static/oscar/css/: styles.css
