[tool.poetry]
name = "archived"
version = "0.1.0"
description = ""
authors = ["Joshua Maldonado <joshjm9915@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pywebcopy = "^6.3.0"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
